<resources>
    <string name="app_name">Password Manager</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="already">Already Have An Account? Click Here...</string>
    <string name="login">Login</string>
    <string name="newAcc">Don\'t Have An Account? Click Here...</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="data">Add The Account And The Password</string>
    <string name="add">Add</string>
</resources>